Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-575: update hive-io (nitay)

  GIRAPH-576: BspServiceMaster.failureCleanup() shouldn't pass null in
              observers' applicationFailed() method (jgarms via nitay)

  GIRAPH-547: Allow in-place modification of edges (apresta)

  GIRAPH-537: Fix log messages produced by aggregators (majakabiljo)

  GIRAPH-480: Add convergence detection to org.apache.giraph.examples.RandomWalkVertex (ssc)

  GIRAPH-565: Make an easy way to gather some logs from workers on master (majakabiljo)

  GIRAPH-559: use hive-io-experimental release (nitay)

  GIRAPH-562: Implement getConf/setConf in AbstractHive classes (majakabiljo)

  GIRAPH-561: Only print vertex/edge input classes if not null (aching)

  GIRAPH-554: Set PartitionContext in InternalVertexRunner (majakabiljo)

  GIRAPH-559: Giraph build breaks (nitay)

  GIRAPH-550: HiveVertexReader should call initialize, not users (nitay)

  GIRAPH-523: MasterObserver should pass in superstep number (gaurav.menghani via nitay)

  GIRAPH-556: Race condition in EdgeStore (apresta)

  GIRAPH-528: Decouple vertex implementation from edge storage (apresta)

  GIRAPH-553: Cleanup HCatalogVertexOutputFormat (majakabiljo)

  GIRAPH-545: Improve Facebook Hadoop dependency (nitay)

  GIRAPH-541: Log before observers (nitay)

  GIRAPH-535: Range-partitioning and edge locality benchmark (apresta)

  GIRAPH-539: When having open requests log which workers are they sent to (majakabiljo)

  GIRAPH-530: GiraphInputFormat#getSplits() should be aware of multithreaded input (apresta)

  GIRAPH-532: Give an explanation when trying to use unregistered aggregators (majakabiljo)

  GIRAPH-453: Pure Hive I/O (nitay)

  GIRAPH-526: HiveGiraphRunner - bug with setting database name (majakabiljo)

  GIRAPH-518: Support Hadoop-2.0.3-alpha release on Giraph (ereisman)

  GIRAPH-525: Add PartitionClass to the ConfigurationUtils (claudio)
